@@ -2616,7 +2616,7 @@ name|Assert
 operator|.
 name|assertEquals
 argument_list|(
-literal|"\"$HADOOP_HOME\"/bin/hadoop org.apache.hadoop.tools."
+literal|"\"$HADOOP_PREFIX\"/bin/hadoop org.apache.hadoop.tools."
 operator|+
 literal|"HadoopArchiveLogsRunner -appId \"$appId\" -user \"$user\" -workingDir "
 operator|+
